# code-for-Lucas-Kanade-20-Years-On

./: README-lk20p1.txt  lk20p1.tgz  readme.md
lk20-common/: hessian.m  init_a.m  init_h.m  jacobian_a.m  jacobian_h.m  quadtobox.m  quadtobox_h.m  sd_images.m  sd_update.m  verb_init_a.m  verb_init_h.m  verb_plot_a.m  verb_plot_h.m  warp_a.m  warp_h.m
lk20-p1/: affine_fa.m  affine_fc.m  affine_ia.m  affine_ic.m  affine_ic_d.m  affine_ic_lm.m  affine_ic_nt.m  affine_ic_nt_d.m  affine_ic_sd.m  homo_fa.m  homo_fc.m  homo_ic.m  run_affine.m  run_homo.m  test_affine.m  test_homo.m
lk20-p1/data/: affine_pt_offset.mat  denso.mat  homo_pt_offset.mat  knee.mat  simon.mat  takeo.mat
lk20-p1/data/images/: takeo.pgm
lk20-p1/figures/: cnvg_plot_affine.m  freq_plot_affine.m  lk20style.m
other-sources/: readme.md
other-sources/clg_7/: CMakeLists.txt  README.txt  license.txt
other-sources/clg_7/img/theoreticalpsf_threepixelshift/: dot_d0.tif  dot_d3.tif
other-sources/clg_7/source/: bicubic_interpolation.c  bicubic_interpolation.h  clg_of.c  clg_of.h  clg_of_main.c  iio.c  iio.h  mask.c  mask.h  test_rgb2gray.c  util.c  util.h  zoom.c  zoom.h
other-sources/imscript/: Makefile  parabola.sh
other-sources/imscript/src/: iio.c  iio.h
other-sources/phs_3/: Makefile  README.txt  bicubic_interpolation.c  horn_schunck_classic.c  horn_schunck_pyramidal.c  horn_schunck_pyramidal_cli.c  iio.c  license.txt  mask.c  zoom.c
other-sources/sms_optic_flow_2.0/: README.txt
other-sources/sms_optic_flow_2.0/spatial/: Makefile  README.txt  iio.h  (+6 more)
other-sources/tvl1flow_3/: uv.flo
(+8 files in other folders)
