PROJECT(test_clgof)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_C_FLAGS "-std=c99 -Wall -Wextra -Wshadow -Wno-unused -pedantic -g -DNDEBUG -D_GNU_SOURCE")
SET(PROJECT_SOURCE_DIR source)
SET(PROJECT_BINARY_DIR ../bin)

SET(SRC1 ${PROJECT_SOURCE_DIR}/clg_of_main.c 
${PROJECT_SOURCE_DIR}/clg_of.c ${PROJECT_SOURCE_DIR}/clg_of.h  
${PROJECT_SOURCE_DIR}/iio.c ${PROJECT_SOURCE_DIR}/iio.h 
${PROJECT_SOURCE_DIR}/util.c ${PROJECT_SOURCE_DIR}/util.h
${PROJECT_SOURCE_DIR}/mask.c ${PROJECT_SOURCE_DIR}/mask.h
${PROJECT_SOURCE_DIR}/zoom.c ${PROJECT_SOURCE_DIR}/zoom.h
${PROJECT_SOURCE_DIR}/bicubic_interpolation.c ${PROJECT_SOURCE_DIR}/bicubic_interpolation.h)
SET(SRC2 ${PROJECT_SOURCE_DIR}/test_rgb2gray.c ${PROJECT_SOURCE_DIR}/iio.c ${PROJECT_SOURCE_DIR}/iio.h)

ADD_EXECUTABLE(${PROJECT_BINARY_DIR}/test_clgof ${SRC1})
ADD_EXECUTABLE(${PROJECT_BINARY_DIR}/test_rgb2gray ${SRC2})
TARGET_LINK_LIBRARIES(${PROJECT_BINARY_DIR}/test_clgof m png tiff jpeg ${LIBS})
TARGET_LINK_LIBRARIES(${PROJECT_BINARY_DIR}/test_rgb2gray jpeg tiff png m)

INSTALL(TARGETS ${PROJECT_BINARY_DIR}/test_clgof RUNTIME DESTINATION bin)
INSTALL(TARGETS ${PROJECT_BINARY_DIR}/test_rgb2gray RUNTIME DESTINATION bin)